@@ -1,3 +1,8 @@
+Mon Nov 25 03:59:45 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* test/ruby/test_gc.rb: catch up last commit.
+	  Now RUBY_GC_OLDSPACE_LIMIT(...) is RUBY_GC_OLDMALLOC_LIMIT(...).
+
 Mon Nov 25 03:10:46 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c: change terminology OLDSPACE -> OLDMALLOC.
